 2.0 (August XX, 2015)
=======================
Radar framerate is now separate from Starsector's framerate, defaults to 20 FPS
Merged radar settings into a single file, data/config/radar/radar_settings.json
Combined campaign and combat radars into one codebase
Replaced CampaignRadar and CombatRadar with a generic CommonRadar interface
Added RadarSettings class to retrieve loaded renderers and radar settings
Added getCurrentSightRadius() to CommonRadar interface
Improved icon for relays in the campaign
All renderers now support a "maxShown" setting where valid
Campaign fleet renderer changes:
 - Fleets with a bounty on their head are now shown as gold on the radar
   (faction-level bounties flash between gold and their regular color so you
    won't accidently chase/attack a friendly faction)
New combat renderer: MapBorderRenderer
 - Displays retreat zones in yellow
 - Displays gravity barrier line in red
 - Displays out of bounds in grey
New combat renderer: ShipRenderer
 - Replaces ShipSimpleRenderer and ShipPolygonRenderer
 - Draws proper polygons for ships instead of approximations like old system
 - Will fall back to approximations on ships that can't be triangulated (only
   the Paragon in vanilla and a handful of ships in existing mods)
 - To draw ships as triangles instead (like with the old ShipSimpleRenderer),
   change "simpleMode" to true in radar_settings.json under "shipRenderer"
 - Shields are drawn filled, can be reverted to the old behavior by changing
   "drawSolidShields" to false in radar_settings.json under "shipRenderer"
New utility class: DrawQueue
 - Aids in efficiently drawing many primitive shapes multiple frames in a row
 - Handles native buffer allocation/data/resizing automatically
 - Uses VBOs if the user's card supports them (hint: it does)
New utility class: ShapeUtils
 - Calculates vertices (as float arrays) for common shapes
All interfaces are now fully documented (see javadoc.zip in mod folder)